converted all the remaining URL params to use ResourceReference instead